custom.css: ADD vertical spacer classes
snippets/media-list:
REMOVE max-width style from media-body <div>

site/our-center.html:

OurCenter_CCnetwork section:
REMOVE bs4-media class from list elements to remove unnecessary styling
ADD d-flex class to list elements

OurCenter_Vision section:
ADD styling to text

--- a/site/our-center.html
+++ b/site/our-center.html
@@ -1,23 +1,13 @@
 <section id="OurCenter_Vision">
   <div class="bs4-container-fluid bs4-slide-panel bs4-col-8 bs4-offset-2">
-    <div class="bs4-text-left bs4-mb-5 bs4-h1">
-      How it started and what we aim for.
-    </div>
-
-    <div class="bs4-text-left bs4-h3">
-      The NGS Competence Center Tübingen (NCCT) was established in early 2018
-      with the help of DFG (German Research Foundation) funding. Together with
-      three other national centers, we aim at strengthening the use of
-      high-throughput sequencing methods in Germany. The center offers automated
-      high-throughput services and a rich portfolio of sequencing solutions
-      using the latest Illumina and Oxford Nanopore Technologies sequencers. As
-      part of the Quantitative Biology Center (QBiC), NCCT builds on established
-      core facility structures and integrates with the existing infrastructure
-      for data management and bioinformatics support.
-    </div>
+  <div class="bs4-text-left bs4-mb-5 bs4-h1">How it started and what we aim for.</div>
+  
+  <div class="bs4-text-left bs4-h3">The <strong>NGS Competence Center Tübingen</strong> (NCCT) was established in early 2018 with the help of <a _blank="" href="https://www.dfg.de target=">DFG</a> (German Research Foundation) funding. Together with <strong>three other national centers</strong>, we aim at strengthening the use of <strong>high-throughput sequencing</strong> methods in Germany.<br />
+  <br />
+  The center offers <strong>automated</strong> high-throughput services and a rich portfolio of sequencing solutions using the latest <strong>Illumina</strong> and <strong>Oxford Nanopore Technologies</strong> sequencers. As part of the <a href="http://qbic.life" target="_blank">Quantitative Biology Center</a> (QBiC), NCCT builds on established core facility structures and integrates with the existing infrastructure for data management and bioinformatics support.</div>
   </div>
-</section>
-
+  </section>
+  
 <section id="OurCenter-Institutes">
   <div class="bs4-container-fluid">
     <div class="bs4-row">
@@ -111,41 +101,26 @@
 
 <section id="OurCenter_CCnetwork">
   <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
-    <div>
-      <div class="bs4-text-center bs4-mb-5 bs4-h1">
-        We are integrated in a network of national competence centers, selected
-        by the DFG.
-      </div>
-
-      <div class="bs4-text-center">
-        <ul class="bs4-list-unstyled">
-          <li class="bs4-media bs4-align-items-center bs4-justify-content-center bs4-my-5">
-            <img alt="Generic placeholder image"
-              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/WGGC+Bonn.png/3fc5a0f6-fe78-49f4-9232-1828bdf7f991?t=1582536944647" />
-            <div class="bs4-media-body bs4-h5" style=" max-width:500px;">
-              <a href="https://www.wggc.uni-bonn.de/en">WEST GERMAN GENOME CENTER</a>
-            </div>
-          </li>
-          <li class="bs4-media bs4-align-items-center bs4-justify-content-center bs4-my-5">
-            <img alt="Generic placeholder image"
-              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/dresdenconcept.png/6cfe2b0b-fde1-44cd-9803-bd7310ec6e38?t=1582536944527" />
-            <div class="bs4-media-body bs4-h5" style=" max-width:500px;">
-              <a href="https://genomecenter.tu-dresden.de/about-us">DRESDEN-CONCEPT GENOME CENTER</a>
-            </div>
-          </li>
-          <li class="bs4-media bs4-align-items-center bs4-justify-content-center bs4-my-5">
-            <img alt="Generic placeholder image"
-              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/CCGA_Logo.png/e203b88d-dc73-458c-b045-e67bfd31e0d2?t=1582536943910" />
-            <div class="bs4-media-body bs4-h5" style=" max-width:500px;">
-              <a href="https://www.ccga.uni-kiel.de/landing_page/about_us">COMPETENCE CENTRE FOR GENOMIC ANALYSIS
-                KIEL</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
+  <div>
+  <div class="bs4-text-center bs4-mb-5 bs4-h1">We are integrated in a network of national competence centers, selected by the DFG.</div>
+  
+  <div class="bs4-text-center">
+  <ul class="bs4-list-unstyled">
+    <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
+    <div class="bs4-media-body bs4-h5"><a href="https://www.wggc.uni-bonn.de/en">WEST GERMAN GENOME CENTER</a></div>
+    <img alt="Generic placeholder image" src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/WGGC+Bonn.png/3fc5a0f6-fe78-49f4-9232-1828bdf7f991?t=1582536944647" /></li>
+    <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
+    <div class="bs4-h5 bs4-media-body"><a href="https://genomecenter.tu-dresden.de/about-us">DRESDEN-CONCEPT GENOME CENTER</a></div>
+    <img alt="Generic placeholder image" src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/dresdenconcept.png/6cfe2b0b-fde1-44cd-9803-bd7310ec6e38?t=1582536944527" /></li>
+    <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
+    <div class="bs4-media-body bs4-h5"><a href="https://www.ccga.uni-kiel.de/landing_page/about_us">COMPETENCE CENTRE FOR GENOMIC ANALYSIS KIEL</a></div>
+    <img alt="Generic placeholder image" src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/CCGA_Logo.png/e203b88d-dc73-458c-b045-e67bfd31e0d2?t=1582536943910" /></li>
+  </ul>
   </div>
-</section>
+  </div>
+  </div>
+  </section>
+  
 
 < <section id="OurCenter-Contact">
   <div class="bs4-container-fluid bs4-justify-content-center">
