--- a/snippets/media-list.html
+++ b/snippets/media-list.html
@@ -6,13 +6,13 @@
         <div class="bs4-text-center">
         <ul class="bs4-list-unstyled">
             <li class="bs4-media bs4-align-items-center bs4-justify-content-center bs4-my-5"><img alt="Generic placeholder image" src="https://dummyimage.com/600x400/000/fff" />
-            <div class="bs4-media-body bs4-h5" style=" max-width:500px;"><a href="#">sed diam nonumy eirmod tempor</a></div>
+            <div class="bs4-media-body bs4-h5"><a href="#">sed diam nonumy eirmod tempor</a></div>
             </li>
             <li class="bs4-media bs4-align-items-center bs4-justify-content-center bs4-my-5"><img alt= "Generic placeholder image" src= "https://dummyimage.com/600x400/000/fff" />
-            <div class="bs4-media-body bs4-h5" style=" max-width:500px;"><a href="#">Ut wisi enim ad minim veniam</a></div>
+            <div class="bs4-media-body bs4-h5" ><a href="#">Ut wisi enim ad minim veniam</a></div>
             </li>
             <li class="bs4-media bs4-align-items-center bs4-justify-content-center bs4-my-5"><img alt= "Generic placeholder image" src= "https://dummyimage.com/600x400/000/fff" />
-            <div class="bs4-media-body bs4-h5" style=" max-width:500px;"><a href="#">Nam liber tempor cum soluta nobis eleifend option congue nihil</a></div>
+            <div class="bs4-media-body bs4-h5"><a href="#">Nam liber tempor cum soluta nobis eleifend option congue nihil</a></div>
             </li>
         </ul>
         </div>
