Formatted indentation and spacing
our-center.html:
ADD bs4-w-50 class to reduce image size

--- a/site/our-center.html
+++ b/site/our-center.html
@@ -1,13 +1,20 @@
 <section id="OurCenter_Vision">
   <div class="bs4-container-fluid bs4-slide-panel bs4-col-8 bs4-offset-2">
-  <div class="bs4-text-left bs4-mb-5 bs4-h1">How it started and what we aim for.</div>
-  
-  <div class="bs4-text-left bs4-h3">The <strong>NGS Competence Center Tübingen</strong> (NCCT) was established in early 2018 with the help of <a href="https://www.dfg.de" target="_blank">DFG</a> (German Research Foundation) funding. Together with <strong>three other national centers</strong>, we aim at strengthening the use of <strong>high-throughput sequencing</strong> methods in Germany.<br />
-  <br />
-  The center offers <strong>automated</strong> high-throughput services and a rich portfolio of sequencing solutions using the latest <strong>Illumina</strong> and <strong>Oxford Nanopore Technologies</strong> sequencers. As part of the <a href="http://qbic.life" target="_blank">Quantitative Biology Center</a> (QBiC), NCCT builds on established core facility structures and integrates with the existing infrastructure for data management and bioinformatics support.</div>
+    <div class="bs4-text-left bs4-mb-5 bs4-h1">How it started and what we aim for.</div>
+
+    <div class="bs4-text-left bs4-h3">The <strong>NGS Competence Center Tübingen</strong> (NCCT) was established in
+      early 2018 with the help of <a _blank="" href="https://www.dfg.de target=">DFG</a> (German Research Foundation)
+      funding. Together with <strong>three other national centers</strong>, we aim at strengthening the use of
+      <strong>high-throughput sequencing</strong> methods in Germany.<br />
+      <br />
+      The center offers <strong>automated</strong> high-throughput services and a rich portfolio of sequencing solutions
+      using the latest <strong>Illumina</strong> and <strong>Oxford Nanopore Technologies</strong> sequencers. As part
+      of the <a href="http://qbic.life" target="_blank">Quantitative Biology Center</a> (QBiC), NCCT builds on
+      established core facility structures and integrates with the existing infrastructure for data management and
+      bioinformatics support.</div>
   </div>
-  </section>
-  
+</section>
+
 <section id="OurCenter-Institutes">
   <div class="bs4-container-fluid">
     <div class="bs4-row">
@@ -101,26 +108,36 @@
 
 <section id="OurCenter_CCnetwork">
   <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
-  <div>
-  <div class="bs4-text-center bs4-mb-5 bs4-h1">We are integrated in a network of national competence centers, selected by the DFG.</div>
-  
-  <div class="bs4-text-center">
-  <ul class="bs4-list-unstyled">
-    <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
-    <div class="bs4-media-body bs4-h5"><a href="https://www.wggc.uni-bonn.de/en">WEST GERMAN GENOME CENTER</a></div>
-    <img alt="Generic placeholder image" src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/WGGC+Bonn.png/3fc5a0f6-fe78-49f4-9232-1828bdf7f991?t=1582536944647" /></li>
-    <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
-    <div class="bs4-h5 bs4-media-body"><a href="https://genomecenter.tu-dresden.de/about-us">DRESDEN-CONCEPT GENOME CENTER</a></div>
-    <img alt="Generic placeholder image" src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/dresdenconcept.png/6cfe2b0b-fde1-44cd-9803-bd7310ec6e38?t=1582536944527" /></li>
-    <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
-    <div class="bs4-media-body bs4-h5"><a href="https://www.ccga.uni-kiel.de/landing_page/about_us">COMPETENCE CENTRE FOR GENOMIC ANALYSIS KIEL</a></div>
-    <img alt="Generic placeholder image" src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/CCGA_Logo.png/e203b88d-dc73-458c-b045-e67bfd31e0d2?t=1582536943910" /></li>
-  </ul>
+    <div>
+      <div class="bs4-text-center bs4-mb-5 bs4-h1">We are integrated in a network of national competence centers,
+        selected by the DFG.</div>
+
+      <div class="bs4-text-center">
+        <ul class="bs4-list-unstyled">
+          <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
+            <div class="bs4-media-body bs4-h5"><a href="https://www.wggc.uni-bonn.de/en">WEST GERMAN GENOME CENTER</a>
+            </div>
+            <img alt="Generic placeholder image"
+              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/WGGC+Bonn.png/3fc5a0f6-fe78-49f4-9232-1828bdf7f991?t=1582536944647" />
+          </li>
+          <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
+            <div class="bs4-h5 bs4-media-body"><a href="https://genomecenter.tu-dresden.de/about-us">DRESDEN-CONCEPT
+                GENOME CENTER</a></div>
+            <img alt="Generic placeholder image"
+              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/dresdenconcept.png/6cfe2b0b-fde1-44cd-9803-bd7310ec6e38?t=1582536944527" />
+          </li>
+          <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
+            <div class="bs4-media-body bs4-h5"><a href="https://www.ccga.uni-kiel.de/landing_page/about_us">COMPETENCE
+                CENTRE FOR GENOMIC ANALYSIS KIEL</a></div>
+            <img alt="Generic placeholder image"
+              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/CCGA_Logo.png/e203b88d-dc73-458c-b045-e67bfd31e0d2?t=1582536943910" />
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
-  </div>
-  </div>
-  </section>
-  
+</section>
+
 
 < <section id="OurCenter-Contact">
   <div class="bs4-container-fluid bs4-justify-content-center">
@@ -135,7 +152,7 @@
         <div class="bs4-card-deck bs4-text-center">
           <div class="bs4-card bs4-border-0">
             <div class="bs4-card-body">
-              <img alt="Address" class="img-top bs4-img-thumbnail"
+              <img alt="Address" class="img-top bs4-img-thumbnail bs4-w-50"
                 src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-address.png/7b13ad9a-a287-4900-a46e-be149ebc8c19?t=1582555165611" />
               <div class="bs4-card-textbox bs4-mt-3">
                 <div class="bs4-card-title bs4-h4">Address</div>
@@ -150,7 +167,7 @@
 
           <div class="bs4-card bs4-border-0">
             <div class="bs4-card-body">
-              <img alt="Email" class="img-top bs4-img-thumbnail"
+              <img alt="Email" class="img-top bs4-img-thumbnail bs4-w-50"
                 src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-email.png/be3150fe-1b7c-4a60-866c-faba396c32a9?t=1582555165334" />
               <div class="bs4-card-textbox bs4-mt-3">
                 <div class="bs4-card-title bs4-h4">E-Mail</div>
@@ -166,7 +183,7 @@
 
           <div class="bs4-card bs4-border-0">
             <div class="bs4-card-body">
-              <img alt="Phone" class="img-top bs4-img-thumbnail"
+              <img alt="Phone" class="img-top bs4-img-thumbnail bs4-w-50"
                 src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-phone.png/d12edc10-dff5-432a-97ed-e5529583a5ba?t=1582555165420" />
               <div class="bs4-card-textbox bs4-mt-3">
                 <div class="bs4-card-title bs4-h4">Phone and Fax</div>
