rename sections and files rename files rename sections add content to externe-links.html

--- a/site/impressum/ansprechpartner.html
+++ b/site/impressum/ansprechpartner.html
@@ -1,4 +1,4 @@
-<section id="Impressum-Ansprechpartner">
+<section id="ansprechpartner">
     <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
         <div class="slide-panel-title bs4-text-left bs4-mb-5 bs4-h1">Ansprechpartner</div>
 
