--- a/site/impressum/impressum.html
+++ b/site/impressum/impressum.html
@@ -1,4 +1,4 @@
-<section id="Impressum-Introduction">
+<section id="impressum">
     <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
         <div class="slide-panel-title bs4-text-center bs4-mb-5 bs4-h1">Impressum - Imprint</div>
 
