--- a/site/impressum/urheberrecht.html
+++ b/site/impressum/urheberrecht.html
@@ -1,4 +1,4 @@
-<section id="Impressum-Urheberrecht">
+<section id="urheberrecht">
     <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
         <div class="slide-panel-title bs4-text-left bs4-mb-5 bs4-h1">Urheberrecht</div>
 
