code format and completion of existing information

--- a/snippets/borderless-definition-table.html
+++ b/snippets/borderless-definition-table.html
@@ -5,9 +5,7 @@
     </h1>
 
     <div class="bs4-container bs4-table-responsive-sm">
-      <table
-        class="bs4-table bs4-table-borderless impressum-table impressum-table-striped"
-      >
+      <table class="bs4-table bs4-table-borderless impressum-table impressum-table-striped">
         <tbody>
           <tr>
             <th>dolor sit</th>
