add 4 panels to welcome page

--- a/site/welcome/landing-page.html
+++ b/site/welcome/landing-page.html
@@ -1,47 +1,53 @@
 <!-- site: https://portal-testing.qbic.uni-tuebingen.de/web/ncct -->
 <section id="welcome">
-    <div class="bs4-container">
-        <div class="bs4-row">
-            <div class="section-title bs4-w-100">
-                <div class="bs4-card-deck">
-                    <div class="bs4-card"><img alt="" class="bs4-card-img img-cover"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52101/UKT_MedMikrobiologie_8843-width-1779-height-1181.jpeg/ebdb21bd-a1a4-49c1-921e-1b790de609ba?t=1582016702120" />
-                        <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
-                            <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">Our Center</div>
-                            </div>
-                            <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/our-center" class="bs4-stretched-link"></a>
+    <div class="bs4-p-5">
+        <div class="section-title bs4-w-100">
+            <div class="bs4-card-deck">
+                <div class="bs4-card">
+                    <img alt="" class="bs4-card-img img-cover min-vh-50"
+                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52101/UKT_MedMikrobiologie_8843-width-1779-height-1181.jpeg/ebdb21bd-a1a4-49c1-921e-1b790de609ba?t=1582016702120" />
+                    <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
+                        <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
+                            <div class="bs4-card-text bs4-h2">Our Center</div>
                         </div>
+                        <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/our-center"
+                            class="bs4-stretched-link"></a>
                     </div>
+                </div>
 
-                    <div class="bs4-card"><img alt="" class="bs4-card-img img-cover"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52776/submit_project.jpg/fb535fa5-0cf8-4e06-a03c-738e6f48df67?t=1582115515420" />
-                        <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
-                            <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">Submit Your Project</div>
-                            </div>
-                            <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/submit-your-project" class="bs4-stretched-link"></a>
+                <div class="bs4-card">
+                    <img alt="" class="bs4-card-img img-cover min-vh-50"
+                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52776/submit_project.jpg/fb535fa5-0cf8-4e06-a03c-738e6f48df67?t=1582115515420" />
+                    <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
+                        <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
+                            <div class="bs4-card-text bs4-h2">Submit Your Project</div>
                         </div>
+                        <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/submit-your-project"
+                            class="bs4-stretched-link"></a>
                     </div>
+                </div>
 
-                    <div class="bs4-card"><img alt="" class="bs4-card-img img-cover"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55367/sequencing-solutions-genetics.jpg/6a78fe56-54a6-4412-8ea5-8e34ee1d9b94?t=1582813198222" />
-                        <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
-                            <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">Sequencing Solutions</div>
-                            </div>
-                            <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/sequencing-solutions" class="bs4-stretched-link"></a>
+                <div class="bs4-card">
+                    <img alt="" class="bs4-card-img img-cover min-vh-50"
+                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55367/sequencing-solutions-genetics.jpg/6a78fe56-54a6-4412-8ea5-8e34ee1d9b94?t=1582813198222" />
+                    <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
+                        <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
+                            <div class="bs4-card-text bs4-h2">Sequencing Solutions</div>
                         </div>
+                        <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/sequencing-solutions"
+                            class="bs4-stretched-link"></a>
                     </div>
+                </div>
 
-                    <div class="bs4-card"><img alt="" class="bs4-card-img img-cover"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55367/bioinformatics-services-genetics.jpg/3b1c5b42-dd57-4457-ad11-312d06c5124e?t=1582812776256" />
-                        <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
-                            <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">Bioinformatics Services</div>
-                            </div>
-                            <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/bioinformatics-services" class="bs4-stretched-link"></a>
+                <div class="bs4-card">
+                    <img alt="" class="bs4-card-img img-cover min-vh-50"
+                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55367/bioinformatics-services-genetics.jpg/3b1c5b42-dd57-4457-ad11-312d06c5124e?t=1582812776256" />
+                    <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
+                        <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
+                            <div class="bs4-card-text bs4-h2">Bioinformatics Services</div>
                         </div>
+                        <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/bioinformatics-services"
+                            class="bs4-stretched-link"></a>
                     </div>
                 </div>
             </div>
