Change display on small screens

--- a/site/welcome/landing-page.html
+++ b/site/welcome/landing-page.html
@@ -1,6 +1,6 @@
 <!-- site: https://portal-testing.qbic.uni-tuebingen.de/web/ncct -->
 <section id="welcome">
-    <div class="bs4-p-5">
+    <div class="bs4-pl-5 bs4-pr-5 bs4-p-sm-0">
         <div class="section-title bs4-w-100">
             <div class="bs4-card-deck">
                 <div class="bs4-card">
