--- a/site/impressum/impressum.html
+++ b/site/impressum/impressum.html
@@ -1,7 +1,11 @@
-<section id="impressum">
-    <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
-        <div class="slide-panel-title bs4-text-center bs4-mb-5 bs4-h1">Impressum - Imprint</div>
-
-        <div class="slide-panel-text bs4-text-center bs4-h3">&nbsp;</div>
+<section id="Impressum-Introduction">
+    <div class="bs4-container">
+        <div class="bs4-row">
+            <div class="bs4-col-8 bs4-offset-2">
+                <div class="section-title">
+                    <div class="bs4-h1 bs4-text-center">Impressum - Imprint</div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
