--- a/site/downloads/documents.html
+++ b/site/downloads/documents.html
@@ -1,11 +1,15 @@
-<section id="Downloads-Documents">
+<section id="submission-documents">
     <div class="bs4-container">
-        <div class="slide-title bs4-text-center bs4-mb-5 bs4-h1">Documents</div>
-
-        <div class="slide-subtitle bs4-text-center bs4-mb-5 bs4-h3">Lorem ipsum dolor sit amet, consectetur adipiscing
-            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</div>
-
-        <div class="bs4-row bs4-justify-content-center">
+        <div class="bs4-row">
+            <div class="bs4-col-8 bs4-offset-2">
+                <div class="section-title">
+                    <div class="bs4-h1 bs4-text-center">Project Submission Documents</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bs4-container">
+         <div class="bs4-row bs4-justify-content-center">
             <div class="bs4-card-columns">
                 <div class="bs4-card">
                     <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Title 1</div>
