--- a/site/downloads/sops.html
+++ b/site/downloads/sops.html
@@ -1,4 +1,4 @@
-<section id="Downloads-SOP">
+<section id="sops">
     <div class="container">
         <div class="slide-title bs4-text-center bs4-mb-5 bs4-h1">Standard operating procedure</div>
 
