--- a/site/our-center/contact.html
+++ b/site/our-center/contact.html
@@ -1,4 +1,4 @@
-<section id="Our-Center-Contact">
+<section id="ncct-contact">
     <div class="bs4-container-fluid bs4-justify-content-center">
         <div class="bs4-row">
             <div class="bs4-col-8 bs4-offset-2">
@@ -26,8 +26,9 @@
                                 <div class="bs4-card-title bs4-h4">E-Mail</div>
 
                                 <div class="bs4-card-subtitle bs4-h6 mb-2"><a href="mailto:
-    
-    ncct@med.uni-tuebingen.de">ncct@med.uni-tuebingen.de</a></div>
+    ncct@med.uni-tuebingen.de">
+                                        ncct@med.uni-tuebingen.de
+                                    </a></div>
                             </div>
                         </div>
                     </div>
@@ -37,10 +38,14 @@
                                 class="img-top bs4-img-fluid bs4-img-thumbnail bs4-w-25"
                                 src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-phone.png/d12edc10-dff5-432a-97ed-e5529583a5ba?t=1582555165420" />
                             <div class="bs4-card-textbox bs4-mt-3">
-                                <div class="bs4-card-title bs4-h4">Phone and Fax</div>
+                                <div class="bs4-card-title bs4-h4">
+                                    Phone and Fax
+                                </div>
 
-                                <p class="bs4-card-text bs4-h6">Telephone: +49 7071/29-72298<br />
-                                    Fax: +49 7071/29-4811</p>
+                                <p class="bs4-card-text bs4-h6">
+                                    Telephone: +49 7071/29-72298<br />
+                                    Fax: +49 7071/29-4811
+                                </p>
                             </div>
                         </div>
                     </div>
