increase navbar font-size to `larger` edit contact email link

--- a/site/our-center/contact.html
+++ b/site/our-center/contact.html
@@ -25,11 +25,11 @@
                             <div class="bs4-card-textbox bs4-mt-3">
                                 <div class="bs4-card-title bs4-h4">E-Mail</div>
 
-                                <div class="bs4-card-subtitle bs4-h6 mb-2"><a href="mailto:
-    ncct@med.uni-tuebingen.de">
+                                <div class="bs4-card-subtitle bs4-h6 mb-2">
                                         ncct@med.uni-tuebingen.de
-                                    </a></div>
+                                </div>
                             </div>
+                            <a href="mailto:ncct@med.uni-tuebingen.de" class="bs4-stretched-link"></a>
                         </div>
                     </div>
 
