--- a/site/our-center/vision.html
+++ b/site/our-center/vision.html
@@ -3,7 +3,7 @@
         <div class="bs4-text-left bs4-mb-5 bs4-h1">How it started and what we aim for.</div>
 
         <div class="bs4-text-left">The <strong>NGS Competence Center Tübingen</strong> (NCCT) was established in early
-            2018 with the help of <a _blank="" href="https://www.dfg.de target=">DFG</a> (German Research Foundation)
+            2018 with the help of <a target="_blank" href="https://www.dfg.de">DFG</a> (German Research Foundation)
             funding. Together with <strong>three other national centers</strong>, we aim at strengthening the use of
             <strong>high-throughput sequencing</strong> methods in Germany.<br />
             <br />
