Changed styling according to predefined requirements:
CHANGED Headline size to match predefined settings
STREAMLINED HTML structure for all sections
RENAMED impressum.html to introduction.html to keep naming consistent
RENAMED contact to ncct-contact.html to keep naming consistent

and many more style adaptions.

--- a/site/impressum/bildnachweise.html
+++ b/site/impressum/bildnachweise.html
@@ -1,10 +1,11 @@
 <section id="bildnachweise">
     <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
-        <div class="slide-panel-title bs4-text-left bs4-mb-5 bs4-h1">Bildnachweise</div>
-
-        <div class="slide-panel-text bs4-text-left bs4-h3">Bilder auf dieser Website die im folgenden nicht separat
-            aufgeführt werden stammen entweder vom Anbieter dieser Website und unterliegen, wie im Kapitel Urheberrecht
-            auf dieser Seite beschrieben oder stammen vom Anbieter Pixabay und sind frei nutzbar unter Pixabay License.
+        <div class="section-title">
+            <div class="bs4-h2">Bildnachweise</div>
         </div>
+
+        <div class="bs4-text-left">Bilder auf dieser Website die im folgenden nicht separat aufgeführt werden stammen
+            entweder vom Anbieter dieser Website und unterliegen, wie im Kapitel Urheberrecht auf dieser Seite
+            beschrieben oder stammen vom Anbieter Pixabay und sind frei nutzbar unter Pixabay License.</div>
     </div>
 </section>
