--- a/site/impressum/allgemeine-informationen.html
+++ b/site/impressum/allgemeine-informationen.html
@@ -1,9 +1,10 @@
 <section id="allgemeine-informationen">
     <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
-        <div class="slide-panel-title bs4-text-left bs4-mb-5 bs4-h1">Allgemeine Informationen gem. § 5 TMG, § 55 RStVG
+        <div class="section-title">
+            <div class="bs4-h2">Allgemeine Informationen gem. § 5 TMG, § 55 RStVG</div>
         </div>
 
-        <div class="bs4-container bs4-table-responsive-sm">
+        <div class="bs4-table-responsive-sm bs4-text-left">
             <table class="bs4-table bs4-table-borderless impressum-table-striped">
                 <tbody>
                     <tr>
