--- a/site/impressum/ansprechpartner.html
+++ b/site/impressum/ansprechpartner.html
@@ -1,8 +1,10 @@
 <section id="ansprechpartner">
     <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
-        <div class="slide-panel-title bs4-text-left bs4-mb-5 bs4-h1">Ansprechpartner</div>
+        <div class="section-title">
+            <div class="bs4-h2">Ansprechpartner</div>
+        </div>
 
-        <div class="bs4-container bs4-table-responsive-sm">
+        <div class="bs4-table-responsive-sm bs4-text-left">
             <table class="bs4-table bs4-table-borderless impressum-table-striped">
                 <tbody>
                     <tr>
@@ -20,7 +22,7 @@
                         <td>+49 7071-29-72163</td>
                     </tr>
                     <tr>
-                        <th>eMail:</th>
+                        <th>E-Mail:</th>
                         <td>sven.nahnsen@qbic.uni-tuebingen.de</td>
                     </tr>
                 </tbody>
