--- a/site/our-center/vision.html
+++ b/site/our-center/vision.html
@@ -1,16 +1,20 @@
-<section id="Our-Center_Vision">
-    <div class="bs4-container-fluid bs4-slide-panel bs4-col-8 bs4-offset-2">
-        <div class="bs4-text-left bs4-mb-5 bs4-h1">How it started and what we aim for.</div>
+<section id="vision">
+    <div class="bs4-container">
+        <div class="bs4-col-8 bs4-offset-2">
+            <div class="section-title">
+                <div class="bs4-h1 bs4-text-center">How it started and what we aim for.</div>
+            </div>
 
-        <div class="bs4-text-left">The <strong>NGS Competence Center Tübingen</strong> (NCCT) was established in early
-            2018 with the help of <a _blank="" href="https://www.dfg.de target=">DFG</a> (German Research Foundation)
-            funding. Together with <strong>three other national centers</strong>, we aim at strengthening the use of
-            <strong>high-throughput sequencing</strong> methods in Germany.<br />
-            <br />
-            The center offers <strong>automated</strong> high-throughput services and a rich portfolio of sequencing
-            solutions using the latest <strong>Illumina</strong> and <strong>Oxford Nanopore Technologies</strong>
-            sequencers. As part of the <a href="http://qbic.life" target="_blank">Quantitative Biology Center</a>
-            (QBiC), NCCT builds on established core facility structures and integrates with the existing infrastructure
-            for data management and bioinformatics support.</div>
+            <div class="bs4-text-left">The <strong>NGS Competence Center Tübingen</strong> (NCCT) was established in
+                early 2018 with the help of <a _blank="" href="https://www.dfg.de target=">DFG</a> (German Research
+                Foundation) funding. Together with <strong>three other national centers</strong>, we aim at
+                strengthening the use of <strong>high-throughput sequencing</strong> methods in Germany.<br />
+                <br />
+                The center offers <strong>automated</strong> high-throughput services and a rich portfolio of sequencing
+                solutions using the latest <strong>Illumina</strong> and <strong>Oxford Nanopore Technologies</strong>
+                sequencers. As part of the <a href="http://qbic.life" target="_blank">Quantitative Biology Center</a>
+                (QBiC), NCCT builds on established core facility structures and integrates with the existing
+                infrastructure for data management and bioinformatics support.</div>
+        </div>
     </div>
 </section>
