--- a/site/start-project/project-submission.html
+++ b/site/start-project/project-submission.html
@@ -23,25 +23,25 @@
                 </div>
                 <ol class="bs4-list-group">
                     <li class="bs4-list-group-item">
-                        collect basic project information
+                        collect <a href="#project-questions">basic project information</a>
                     </li>
                     <li class="bs4-list-group-item">
-                        contact us and receive counselling
+                        <a href="/web/ncct/contact" target="_blank">contact us</a> and receive counselling
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        fill out a Declaration of Intent
+                        fill out a <a href="/web/ncct/downloads#submission-documents" target="_blank">Declaration of Intent</a>
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        submit the Declaration of Intent to the DFG
+                        submit the Declaration of Intent to the <a href="mailto:WGI-NGS@dfg.de">DFG</a>
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        register to the DFG portal
+                        register to the <a href="https://elan.dfg.de/my.policy" target="_blank">DFG portal</a>
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        contact the NCCT and discuss the pre-filled counselling report
+                        <a href="/web/ncct/contact" target="_blank">contact the NCCT</a> and discuss the pre-filled counselling report
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        send a full application to the DFG including thecounselling report
+                        send a full application to the DFG including the counselling report
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
                         await approval by the DFG
@@ -55,7 +55,7 @@
                     </li>
 
                     <li class="bs4-list-group-item">
-                        submit the filled sample sheet to us
+                        submit the filled <a href="/web/ncct/downloads#submission-documents" target="_blank">sample sheet</a> to us
                     </li>
                     <li class="bs4-list-group-item">
                         await sequencing analysis by us
