fix broken link... again. this time for sure

--- a/site/our-center/vision.html
+++ b/site/our-center/vision.html
@@ -6,7 +6,7 @@
             </div>
 
             <div class="bs4-text-left">The <strong>NGS Competence Center Tübingen</strong> (NCCT) was established in
-                early 2018 with the help of <a target="_blank=" href="https://www.dfg.de">DFG</a> (German Research
+                early 2018 with the help of <a target="_blank" href="https://www.dfg.de">DFG</a> (German Research
                 Foundation) funding. Together with <strong>three other national centers</strong>, we aim at
                 strengthening the use of <strong>high-throughput sequencing</strong> methods in Germany.<br />
                 <br />
