add bs4-stretched-link to contact information mail

--- a/site/our-center/ncct-contact.html
+++ b/site/our-center/ncct-contact.html
@@ -20,13 +20,15 @@
                 </div>
 
                 <div class="bs4-card bs4-border-0">
-                    <div class="bs4-card-body"><img alt="Email" class="img-top bs4-img-fluid bs4-img-thumbnail bs4-w-25"
+                    <div class="bs4-card-body">
+                        <img alt="Email" class="img-top bs4-img-fluid bs4-img-thumbnail bs4-w-25"
                             src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-email.png/be3150fe-1b7c-4a60-866c-faba396c32a9?t=1582555165334" />
                         <div class="bs4-card-textbox bs4-mt-3">
                             <div class="bs4-card-title bs4-h4">E-Mail</div>
 
                             <div class="bs4-card-subtitle bs4-h6 mb-2">ncct@med.uni-tuebingen.de</div>
                         </div>
+                        <a href="mailto:ncct@med.uni-tuebingen.de" class="bs4-stretched-link"></a>
                     </div>
                 </div>
 
