add DFG indication to files from the DFG

--- a/site/downloads/submission-documents.html
+++ b/site/downloads/submission-documents.html
@@ -13,10 +13,10 @@
             <div class="bs4-col-8 bs4-offset-2">
                 <ul class="bs4-list-group">
                     <li class="bs4-list-group-item">
-                        Declaration of Intent
+                        Declaration of Intent (DFG)
                     </li>
                     <li class="bs4-list-group-item">
-                        Proposal Preparation Instructions
+                        Proposal Preparation Instructions (DFG)
                     </li>
                     <li class="bs4-list-group-item">
                         Project Sample Sheet
