add google maps link to contact address

--- a/site/our-center/ncct-contact.html
+++ b/site/our-center/ncct-contact.html
@@ -16,6 +16,7 @@
                             <p class="bs4-card-text bs4-h6">NGS Competence Center Tübingen<br />
                                 Calwerstraße 7, 72076 Tübingen.</p>
                         </div>
+                        <a href="https://goo.gl/maps/J37UrVYNgUCZUtz76" target="_blank" class="bs4-stretched-link"></a>
                     </div>
                 </div>
 
