Changed container class for all sections and table class for the ansprechpartner and allgemeine-informationen section
All sections:

REMOVE container-fluid class as a wrapper
ADD container class as a wrapper

impressum/allgemeine-informationen.html
REMOVE bs4-responsive-table-sm class
ADD bs4-responsive-table class

impressum/ansprechpartner.html

REMOVE bs4-responsive-table-sm class
ADD bs4-responsive-table class

--- a/site/impressum/externe-links.html
+++ b/site/impressum/externe-links.html
@@ -1,5 +1,5 @@
 <section id="externe-links">
-    <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
+    <div class="bs4-container bs4-col-8 bs4-offset-2">
         <div class="section-title">
             <div class="bs4-h2">ExterneLinks</div>
         </div>
