--- a/site/impressum/allgemeine-informationen.html
+++ b/site/impressum/allgemeine-informationen.html
@@ -1,10 +1,10 @@
 <section id="allgemeine-informationen">
-    <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
+    <div class="bs4-container bs4-col-8 bs4-offset-2">
         <div class="section-title">
             <div class="bs4-h2">Allgemeine Informationen gem. § 5 TMG, § 55 RStVG</div>
         </div>
 
-        <div class="bs4-table-responsive-sm bs4-text-left">
+        <div class="bs4-table-responsive bs4-text-left">
             <table class="bs4-table bs4-table-borderless impressum-table-striped">
                 <tbody>
                     <tr>
