--- a/site/downloads/sops.html
+++ b/site/downloads/sops.html
@@ -7,9 +7,9 @@
         </div>
     </div>
     <div class="bs4-container">
-        <div class="bs4-card-columns">
+        <div class="bs4-card-deck">
 
-            <div class="bs4-card">
+            <div class="bs4-card bs4-border-0">
                 <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Variant Detection</div>
 
                 <ul class="bs4-list-group bs4-text-center">
@@ -21,7 +21,7 @@
                 </ul>
             </div>
 
-            <div class="bs4-card">
+            <div class="bs4-card bs4-border-0">
                 <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Expression Analysis</div>
 
                 <ul class="bs4-list-group bs4-text-center">
@@ -35,7 +35,7 @@
                 </ul>
             </div>
 
-            <div class="bs4-card">
+            <div class="bs4-card bs4-border-0">
                 <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Metagenomics</div>
 
                 <ul class="bs4-list-group bs4-text-center">
@@ -45,7 +45,7 @@
                 </ul>
             </div>
 
-            <div class="bs4-card">
+            <div class="bs4-card bs4-border-0">
                 <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Epigenomics</div>
                 <ul class="bs4-list-group bs4-text-center">
                     <li class="bs4-list-group-item">Whole genome bisulfite sequencing</li>
