Add current links for all entries in project submission documents

--- a/site/downloads/submission-documents.html
+++ b/site/downloads/submission-documents.html
@@ -8,19 +8,19 @@
             </div>
         </div>
     </div>
+
     <div class="bs4-container">
-         <div class="bs4-row">
+        <div class="bs4-row">
             <div class="bs4-col-8 bs4-offset-2">
                 <ul class="bs4-list-group">
-                    <li class="bs4-list-group-item">
-                        Declaration of Intent (DFG)
-                    </li>
-                    <li class="bs4-list-group-item">
-                        Proposal Preparation Instructions (DFG)
-                    </li>
-                    <li class="bs4-list-group-item">
-                        Project Sample Sheet
-                    </li>
+                    <li class="bs4-list-group-item"><a
+                            href="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/56545/Declaration+of+Intent.pdf/2dcf3813-3228-4e80-a683-159df6794e75">Declaration
+                            of Intent (DFG)</a></li>
+                    <li class="bs4-list-group-item"><a
+                            href="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/56545/Proposal+Project+Recommendations.pdf/e606dec7-7c65-418b-815c-ec5461668377">Proposal
+                            Preparation Instructions (DFG)</a></li>
+                    <li class="bs4-list-group-item"><a href="https://github.com/qbicsoftware/metadata-doc">Project
+                            Sample Sheet</a></li>
                 </ul>
             </div>
         </div>
