Added Stephan Ossowski as contact person and switched order with Nicolai

--- a/site/our-center/institutes.html
+++ b/site/our-center/institutes.html
@@ -11,22 +11,22 @@
                             src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/csm_portrait_olaf_riess_sd_56a65f1bcd.jpg/7b4a0c5a-92e4-4844-861a-fd1eb156db00?t=1583168195776" />
                         <div class="bs4-card-body bs4-text-left">
                             <div class="bs4-card-title bs4-text-center bs4-h5"><a
-                                    href="http://www.medgen-tuebingen.de/#langsel">"Institute of Medical Genetics and
+                                    href="http://www.medgen-tuebingen.de/#langsel">Institute of Medical Genetics and
                                     Applied Genomics</a></div>
 
                             <div class="bs4-card-text">
-                                <p class="bs4-text-right bs4-font-italic ">Prof. Olaf Riess, coordinator</p>
+                                <p class="bs4-text-right bs4-font-italic">Prof. Olaf Riess, coordinator</p>
 
                                 <p class="bs4-font-weight-bold">Contact Persons:</p>
-
-                                <p><a href="mailto:stephan.ossowski@med.uni-tuebingen.de">Prof. Stephan Ossowski,</a>
-                                </p>
-
-                                <p>Insert Role Here!</p>
 
                                 <p><a href="mailto:Nicolas.Casadei@med.uni-tuebingen.de">Dr. Nicolas Casadei,</a></p>
 
                                 <p>Head of the Core Facility</p>
+
+                                <p><a href="mailto:stephan.ossowski@med.uni-tuebingen.de">Prof. Stephan Ossowski,</a>
+                                </p>
+
+                                <p>Head of Computational Genomics</p>
                             </div>
                         </div>
                     </div>
